--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -196,6 +196,35 @@
                         </div>
                     </div>
                 </li>
+                <li id="toolsDataStatistics">
+                    <div class="collapsible-header">
+                            <i class="material-icons arrow">keyboard_arrow_right</i>
+                            <i class="material-icons">poll</i>
+                            Statistics
+                    </div>
+                    <div class="collapsible-body">
+                        <div class="container">
+                            <div class="row">
+                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
+                                richardson
+                                ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food
+                                truck
+                                quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
+                                bird
+                                on
+                                it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim
+                                keffiyeh
+                                helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                                Ad
+                                vegan
+                                excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw
+                                denim
+                                aesthetic synth nesciunt you probably haven't heard of them accusamus labore
+                                sustainable VHS.
+                            </div>
+                        </div>
+                    </div>
+                </li>
             </ul>
 
         </div>
@@ -383,6 +412,35 @@
                         </div>
                     </div>
                 </li>
+                <li id="workflowStatistics">
+                    <div class="collapsible-header">
+                        <i class="material-icons arrow">keyboard_arrow_right</i>
+                        <i class="material-icons">poll</i>
+                        Statistics
+                    </div>
+                    <div class="collapsible-body">
+                        <div class="container">
+                            <div class="row">
+                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
+                                richardson
+                                ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food
+                                truck
+                                quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
+                                bird
+                                on
+                                it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim
+                                keffiyeh
+                                helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                                Ad
+                                vegan
+                                excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw
+                                denim
+                                aesthetic synth nesciunt you probably haven't heard of them accusamus labore
+                                sustainable VHS.
+                            </div>
+                        </div>
+                    </div>
+                </li>
             </ul>
         </div>
         <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
@@ -465,6 +523,35 @@
                                     </p>
                                 </div>
                             </form>
+                        </div>
+                    </div>
+                </li>
+                <li id="referencesStatistics">
+                    <div class="collapsible-header">
+                        <i class="material-icons arrow">keyboard_arrow_right</i>
+                        <i class="material-icons">poll</i>
+                        Statistics
+                    </div>
+                    <div class="collapsible-body">
+                        <div class="container">
+                            <div class="row">
+                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
+                                richardson
+                                ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food
+                                truck
+                                quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
+                                bird
+                                on
+                                it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim
+                                keffiyeh
+                                helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                                Ad
+                                vegan
+                                excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw
+                                denim
+                                aesthetic synth nesciunt you probably haven't heard of them accusamus labore
+                                sustainable VHS.
+                            </div>
                         </div>
                     </div>
                 </li>
