--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -129,6 +129,23 @@
                                 should-apply="tools_search_jstree_config_apply()" ng-model="tools_var_jstree_model"
                                 tree="tools_var_jstree" ng-show="tools_var_jstree_id_show"></div>
                         </div>
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <select multiple>
+                                    <!-- <option value="" disabled selected>Choose OS</option> -->
+                                    <optgroup label="Ubuntu">
+                                        <option value="Ubuntu_14_04">14.04</option>
+                                        <option value="Ubuntu_16_04">16.04</option>
+                                    </optgroup>
+                                    <optgroup label="Debian">
+                                        <option value="Debian_7">7 (Wheezy)</option>
+                                        <option value="Debian_8">8 (Jessie)</option>
+                                        <option value="Debian_9">9 (Stretch)</option>
+                                    </optgroup>
+                                </select>
+                                <label>Select Operating System</label>
+                            </div>
+                        </div>
                         <!-- Installation -->
                         <div class="row">
                             <h5>Installation Commands</h5>
@@ -198,9 +215,9 @@
                 </li>
                 <li id="toolsDataStatistics">
                     <div class="collapsible-header">
-                            <i class="material-icons arrow">keyboard_arrow_right</i>
-                            <i class="material-icons">poll</i>
-                            Statistics
+                        <i class="material-icons arrow">keyboard_arrow_right</i>
+                        <i class="material-icons">poll</i>
+                        Statistics
                     </div>
                     <div class="collapsible-body">
                         <div class="container">
@@ -252,7 +269,8 @@
                     <a class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px" data-position="bottom"
                         data-tooltip="Fit" ng-click="workflow_info_fit_pressed()">Fit</a>
                     <a class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px" data-position="bottom"
-                        data-tooltip="Clear" ng-click="workflow_info_clear_pressed()" ng-disabled="!workflows_info_editable">Clear</a>
+                        data-tooltip="Clear" ng-click="workflow_info_clear_pressed()"
+                        ng-disabled="!workflows_info_editable">Clear</a>
                     <a class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px" data-position="bottom"
                         data-tooltip="Add Step" ng-click="workflow_info_add_step_clicked()">Add Step</a>
                     <a id="expandAllBtn2" class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px"
@@ -281,16 +299,19 @@
                         <div class="row">
                             <form class="col s12">
                                 <div class="input-field">
-                                    <input id="workflowsGeneralWebsite" type="text" class="validate" ng-model="workflow_website" ng-disabled="!workflows_info_editable">
+                                    <input id="workflowsGeneralWebsite" type="text" class="validate"
+                                        ng-model="workflow_website" ng-disabled="!workflows_info_editable">
                                     <label for="workflowsGeneralWebsite">Website</label>
                                 </div>
                                 <div class="input-field">
-                                    <textarea id="workflowsGeneralDescription"
-                                        class="validate materialize-textarea" ng-model="workflow_description" ng-disabled="!workflows_info_editable"></textarea>
+                                    <textarea id="workflowsGeneralDescription" class="validate materialize-textarea"
+                                        ng-model="workflow_description"
+                                        ng-disabled="!workflows_info_editable"></textarea>
                                     <label for="workflowsGeneralDescription">Description</label>
                                 </div>
                                 <div class="input-field" ng-show="workflow_info_forked_from">
-                                    <textarea id="workflowsGeneralEditSummary" class="validate materialize-textarea" ng-model="workflow_changes" ng-disabled="!workflows_info_editable"></textarea>
+                                    <textarea id="workflowsGeneralEditSummary" class="validate materialize-textarea"
+                                        ng-model="workflow_changes" ng-disabled="!workflows_info_editable"></textarea>
                                     <label for="workflowsGeneralEditSummary">Edit Summary</label>
                                 </div>
                                 <div class="input-field chips left-align"></div>
@@ -347,7 +368,9 @@
                                 <div class="row col s12">
                                     <div class="right-align">
                                         <a class="waves-effect waves-light btn" style="margin:2px">Cancel</a>
-                                        <a class="waves-effect waves-light btn" style="margin:2px" ng-show="workflows_info_editable" ng-click="workflow_step_delete()">Delete</a>
+                                        <a class="waves-effect waves-light btn" style="margin:2px"
+                                            ng-show="workflows_info_editable"
+                                            ng-click="workflow_step_delete()">Delete</a>
                                         <a class="waves-effect waves-light btn" style="margin:2px"
                                             ng-click="workflow_step_add()" ng-show="workflows_info_editable">Add</a>
                                     </div>
@@ -376,12 +399,15 @@
                                     </thead>
                                     <tbody>
                                         <tr ng-repeat="x in workflow_input_outputs">
-                                            <td><input type="text" placeholder="Name" ng-model="x.name" ng-disabled="!workflows_info_editable"></td>
-                                            <td><input type="text" placeholder="Description" ng-model="x.description" ng-disabled="!workflows_info_editable"></td>
+                                            <td><input type="text" placeholder="Name" ng-model="x.name"
+                                                    ng-disabled="!workflows_info_editable"></td>
+                                            <td><input type="text" placeholder="Description" ng-model="x.description"
+                                                    ng-disabled="!workflows_info_editable"></td>
                                             <td class="switch">
                                                 <label>
                                                     IN
-                                                    <input type="checkbox" ng-model="x.out" style="display:none" ng-disabled="!workflows_info_editable">
+                                                    <input type="checkbox" ng-model="x.out" style="display:none"
+                                                        ng-disabled="!workflows_info_editable">
                                                     <span class="lever"></span>
                                                     OUT
                                                 </label>
@@ -389,7 +415,7 @@
                                             <td>
                                                 <a class="waves-effect waves-light btn-small tooltipped green darken-1"
                                                     style="padding-left: 7px; padding-right:7px" data-position="bottom"
-                                                    data-tooltip="Add new variable" 
+                                                    data-tooltip="Add new variable"
                                                     ng-if="$last && x.name && x.description && workflows_info_editable"
                                                     ng-click="workflow_step_add_input_output()"><i
                                                         class="material-icons">add</i></a>
@@ -407,7 +433,9 @@
                                 </table>
                             </div>
                             <div class="right-align">
-                                <a class="waves-effect waves-light btn" style="margin:2px" ng-click="workflow_step_input_output_update_pressed()" ng-show="workflows_info_editable">Update</a>
+                                <a class="waves-effect waves-light btn" style="margin:2px"
+                                    ng-click="workflow_step_input_output_update_pressed()"
+                                    ng-show="workflows_info_editable">Update</a>
                             </div>
                         </div>
                     </div>
@@ -477,8 +505,7 @@
                         data-tooltip="Save" ng-click="tool_create_save_pressed()" ng-show="tools_info_editable"><i
                             class="material-icons">save</i></a> -->
                     <a class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px" data-position="bottom"
-                        data-tooltip="Save"><i
-                            class="material-icons">save</i></a>
+                        data-tooltip="Save"><i class="material-icons">save</i></a>
                 </div>
             </div>
 
@@ -496,7 +523,8 @@
                         <div class="row">
                             <form class="col s12">
                                 <div class="input-field">
-                                    <textarea id="referencesGeneralDescription" class="validate materialize-textarea"></textarea>
+                                    <textarea id="referencesGeneralDescription"
+                                        class="validate materialize-textarea"></textarea>
                                     <label for="referencesGeneralDescription">Description</label>
                                 </div>
                                 <div class="input-field">
@@ -504,7 +532,8 @@
                                     <label for="referencesGeneralDOI">DOI</label>
                                 </div>
                                 <div class="input-field" style="margin-bottom: 0px;">
-                                    <textarea id="referencesGeneralBIBTEX" class="validate materialize-textarea"></textarea>
+                                    <textarea id="referencesGeneralBIBTEX"
+                                        class="validate materialize-textarea"></textarea>
                                     <label for="referencesGeneralBIBTEX">BIBTEX</label>
                                 </div>
                                 <div class="right-align">
