--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -66,7 +66,7 @@
                                         ng-model="tool_changes" ng-disabled="!tools_info_editable"></textarea>
                                     <label for="generalEditSummary">Edit Summary</label>
                                 </div>
-                                <div class="input-field chips left-align"></div>
+                                <div id="generalChips" class="input-field chips left-align"></div>
                             </form>
                         </div>
                     </div>
