URL field added on references->General

--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -220,25 +220,49 @@
                         Statistics
                     </div>
                     <div class="collapsible-body">
-                        <div class="container">
-                            <div class="row">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
-                                richardson
-                                ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food
-                                truck
-                                quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
-                                bird
-                                on
-                                it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim
-                                keffiyeh
-                                helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                                Ad
-                                vegan
-                                excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw
-                                denim
-                                aesthetic synth nesciunt you probably haven't heard of them accusamus labore
-                                sustainable VHS.
-                            </div>
+                        <div class="row">
+                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
+                            richardson
+                            ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food
+                            truck
+                            quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
+                            bird
+                            on
+                            it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim
+                            keffiyeh
+                            helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                            Ad
+                            vegan
+                            excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw
+                            denim
+                            aesthetic synth nesciunt you probably haven't heard of them accusamus labore
+                            sustainable VHS.
+                            <table class="highlight centered">
+                                <thead>
+                                    <tr>
+                                        <th>Name</th>
+                                        <th>Item Name</th>
+                                        <th>Item Price</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Alvin</td>
+                                        <td>Eclair</td>
+                                        <td>$0.87</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Alan</td>
+                                        <td>Jellybean</td>
+                                        <td>$3.76</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Jonathan</td>
+                                        <td>Lollipop</td>
+                                        <td>$7.00</td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </li>
@@ -372,7 +396,8 @@
                                             ng-show="workflows_info_editable"
                                             ng-click="workflow_step_delete()">Delete</a>
                                         <a class="waves-effect waves-light btn" style="margin:2px"
-                                            ng-click="workflow_step_add()" ng-show="workflows_info_editable"><span ng-bind="workflow_step_add_update_label"></span></a>
+                                            ng-click="workflow_step_add()" ng-show="workflows_info_editable"><span
+                                                ng-bind="workflow_step_add_update_label"></span></a>
                                     </div>
                                 </div>
                             </form>
@@ -447,25 +472,49 @@
                         Statistics
                     </div>
                     <div class="collapsible-body">
-                        <div class="container">
-                            <div class="row">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
-                                richardson
-                                ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food
-                                truck
-                                quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
-                                bird
-                                on
-                                it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim
-                                keffiyeh
-                                helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                                Ad
-                                vegan
-                                excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw
-                                denim
-                                aesthetic synth nesciunt you probably haven't heard of them accusamus labore
-                                sustainable VHS.
-                            </div>
+                        <div class="row">
+                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
+                            richardson
+                            ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food
+                            truck
+                            quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
+                            bird
+                            on
+                            it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim
+                            keffiyeh
+                            helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                            Ad
+                            vegan
+                            excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw
+                            denim
+                            aesthetic synth nesciunt you probably haven't heard of them accusamus labore
+                            sustainable VHS.
+                            <table class="highlight centered">
+                                <thead>
+                                    <tr>
+                                        <th>Name</th>
+                                        <th>Item Name</th>
+                                        <th>Item Price</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Alvin</td>
+                                        <td>Eclair</td>
+                                        <td>$0.87</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Alan</td>
+                                        <td>Jellybean</td>
+                                        <td>$3.76</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Jonathan</td>
+                                        <td>Lollipop</td>
+                                        <td>$7.00</td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </li>
@@ -528,6 +577,10 @@
                                     <label for="referencesGeneralDescription">Description</label>
                                 </div>
                                 <div class="input-field">
+                                    <input id="referencesGeneralURL" type="text" class="validate">
+                                    <label for="referencesGeneralURL">URL</label>
+                                </div>
+                                <div class="input-field">
                                     <input id="referencesGeneralDOI" type="text" class="validate">
                                     <label for="referencesGeneralDOI">DOI</label>
                                 </div>
@@ -562,25 +615,49 @@
                         Statistics
                     </div>
                     <div class="collapsible-body">
-                        <div class="container">
-                            <div class="row">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
-                                richardson
-                                ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food
-                                truck
-                                quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
-                                bird
-                                on
-                                it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim
-                                keffiyeh
-                                helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                                Ad
-                                vegan
-                                excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw
-                                denim
-                                aesthetic synth nesciunt you probably haven't heard of them accusamus labore
-                                sustainable VHS.
-                            </div>
+                        <div class="row">
+                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
+                            richardson
+                            ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food
+                            truck
+                            quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
+                            bird
+                            on
+                            it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim
+                            keffiyeh
+                            helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                            Ad
+                            vegan
+                            excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw
+                            denim
+                            aesthetic synth nesciunt you probably haven't heard of them accusamus labore
+                            sustainable VHS.
+                            <table class="highlight centered">
+                                <thead>
+                                    <tr>
+                                        <th>Name</th>
+                                        <th>Item Name</th>
+                                        <th>Item Price</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Alvin</td>
+                                        <td>Eclair</td>
+                                        <td>$0.87</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Alan</td>
+                                        <td>Jellybean</td>
+                                        <td>$3.76</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Jonathan</td>
+                                        <td>Lollipop</td>
+                                        <td>$7.00</td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </li>
